
%%Diagram type

classDiagram

%%Nodes and Contents

class User {
    +UUID id
    +String first_name
    +String last_name
    +String email
    +String password
    +Date created_at
    +List~Review~ reviews
    +List~Review~ places
    +register()
    +login()
    +updateProfile()
}

class Place {
    +UUID id
    +String name
    +String description
    +String address
    +Integer prices
    +Float price_per_night
    +UUID owner_id
    +Date created_at
    +Date updated_at
    +List~Review~ reviews
    +List~Amenity~ amenities
    +addReview()
    +updateDetails()
    +calculateAverageRating()
}

class Review {
    +UUID id
    +UUID user_id
    +UUID place_id
    +String text
    +Integer rating
    +Date created_at
    +Date updated_at
    +editReview()
    +deleteReview()
}

class Amenity {
    +UUID id
    +String name
    +Date created_at
    +Date updated_at
    +List~Place~ places
    +updateAmenity()
}

%%Element Display order and line labels 

User --> Place : Owns
User --> Review : Writes
Place --> Review : Has
Review --> User : Belongs to
Place --> Amenity : Includes
Amenity --> Place : Used in
